k8s/base/networking/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "sensor-platform.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/sensors/data
      backendRefs:
        - name: sensor-data-ingestion-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /api/register
      backendRefs:
        - name: sensor-management-service
          port: 81
